<resources>
    <string name="app_name">Pokedex</string>
    <string name="intro_title">Pokedex Oficial</string>
    <string name="intro_subtitle">Descubre los mejores pokémons y sus evoluciones</string>
    <string name="intro_button">Entrar</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="UserName">Nombre de usuario</string>
    <string name="Password">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="register_title">Registrarse</string>
    <string name="forgot_password">¿Ha olvidado su contraseña?</string>
    <string name="not_registered">¿No tienes cuenta? Registrate aquí</string>
    <string name="is_registered">¿Ya tienes cuenta? Inicia sesión aquí</string>
    <string name="main_title">¿Qué pokémon te apetece ver hoy?</string>
    <string name="search">Buscar…</string>
    <string name="search_results">Resultados de la búsqueda</string>
    <string name="search_no_results">No se han encontrado resultados</string>
    <string name="New_options">Primera generación</string>
    <string name="Popular_options">Más populares</string>
    <string name="Top_rated_options">Legendarios</string>
    <string name="username">Nombre de usuario:</string>"
    <string name="password">Contraseña:</string>
    <string name="logout">Cerrar sesión</string>
    <string name="erase_account">Borrar cuenta</string>
    <string name="profile">Perfil</string>
    <string name="catalog_title">Compra de cartas</string>
    <string name="cinesa">Santiago de Compostela</string>
    <string name="yelmo">España</string>
    <string name="paco">Global</string>
    <string name="buscar">Buscar</string>
    <string name="no_results_subtitle">Prueba a buscar otra cosa</string>
    <string name="posible_results">Quizás te guste también</string>

    <string name="guessgame">¿Qué Pokemon es?</string>
    <string name="guessgame_subtitle">Adivina el Pokemon</string>
    <string name="guessgame_correct">¡Correcto!</string>
    <string name="guessgame_incorrect">¡Incorrecto!</string>
    <string name="guessgame_button">¡Adivinar!</string>
    <string name="hint">Pista</string>
    <string name="gamedescription">En un juego de adivinar Pokémon por siluetas, los jugadores se
        enfrentan a imágenes que muestran solo las siluetas de los Pokémon, sin detalles visibles.
        Cada vez que aciertas un Pokémon, ganas 1 punto. Si usas la opción "revelar identidad",
        pierdes 1 punto. El objetivo es adivinar el nombre del Pokémon correspondiente basándose únicamente en su
        contorno. Los participantes utilizan su conocimiento de la franquicia Pokémon y su habilidad
        para identificar las formas características de los Pokémon para deducir correctamente de qué
        criatura se trata.</string>

    <!-- Pokemon -->
    <string name="type">Tipo</string>
    <string name="avg_spawn">Media de aparición</string>
    <string name="spawn_time">Hora de aparición</string>
    <string name="spawn_chance">Posibilidad de aparición</string>
    <string name="egg">Tipo de huevo del Pokemon</string>
    <string name="candy">Caramelos</string>
    <string name="candy_count">Número de caramelos necesarios</string>
    <string name="weaknesses">Debilidades</string>

    <!-- In-App Controller -->
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="incorrect">¡Incorrecto!</string>
    <string name="correct">¡Correcto!</string>
    <string name="alreadyreveal">¡Ya ha sido revelado!</string>
    <string name="noemptyspaces">¡Rellena todos los campos!</string>
    <string name="correctlogin">Inicio de Sesión Correcto</string>
    <string name="incorrectlogin">Error en Inicio de Sesión</string>
    <string name="correctregister">Registro Correcto</string>
    <string name="incorrectregister">Error en Registro</string>
    <string name="correctdelete">Cuenta Borrada</string>
    <string name="incorrectdelete">Error al Borrar Cuenta</string>
    <string name="correctlogout">Cierre de Sesión Correcto</string>
    <string name="incorrectlogout">Error al Cerrar Sesión</string>
    <string name="signoutacc">Cerrar Sesión</string>
    <string name="deleteacc">Borrar Cuenta</string>
    <string name="deleteaccquestion">¿Estás seguro de que quieres borrar tu cuenta?</string>
    <string name="signoutaccquestion">¿Estás seguro de que quieres Cerrar Sesión?</string>
    <string name="passwordconflict">¡Las contraseñas no coinciden!</string>


    <string name="credits1">Hace mucho tiempo, en una galaxia muy, muy lejana…</string>
    <string name="credits2">AGRADECIMIENTOS DEL PROYECTO</string>
    <string name="credits3">Este proyecto ha sido posible gracias al esfuerzo y la dedicación de muchas personas que han colaborado en él</string>
    <string name="credits4">Queremos agradecer especialmente a nuestro director, que nos ha guiado con su visión y su pasión por la historia</string>
    <string name="credits5">También queremos agradecer a nuestro equipo técnico, que ha hecho realidad las escenas más espectaculares con su talento y su creatividad</string>
    <string name="credits6">Asimismo, queremos agradecer a nuestro elenco, que ha dado vida a los personajes con su interpretación y su carisma</string>
    <string name="credits7">Por último, pero no menos importante, queremos agradecer a nuestro público, que nos ha acompañado en esta aventura y nos ha apoyado con su entusiasmo y su fidelidad</string>
    <string name="credits8">Gracias a todos por formar parte de este proyecto</string>
    <string name="credits9">Que la Fuerza os acompañe</string>

</resources>