<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:textStyle="bold"
                android:layout_marginEnd="32dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_height="50dp"
                android:hint="@string/UserName"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:background="@drawable/btn_background"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/password_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                android:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                style="@android:style/Widget.Button"
                android:background="@drawable/btn_background"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textAlignment="center"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>