<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="32dp"
                android:text="@string/register_title"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameR"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:hint="@string/UserName"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/passwordR"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/passwordR2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/btn_background"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button_deltodo"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/is_registered"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>