<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.RecommendationsFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/main_title"
                android:textAlignment="center"
                android:textColor="@color/wheat"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_edt_background"
                    android:drawableEnd="@drawable/search"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/wheat"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/wheat"
                    android:textColorHint="@color/wheat"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/searchBtn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_background"
                    android:text="@string/buscar"
                    android:textColor="@color/wood"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/New_options"
                android:textColor="@color/wheat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lastmovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:minHeight="200dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/loading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/lastmovies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lastmovies"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>